# expense-tracker

./: LICENSE  README.md  data.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/expense_tracker/: log.py  main.py
