[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "0.1.0"
description = "A simple command-line tool to track daily expenses."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Sylvester Das", email = "sylvester.das@gmail.com" }
]
keywords = ["cli", "expense", "tracker", "python", "personal-project"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "tabulate>=0.9.0",
    "pandas>=2.3.1"
]

[project.urls]
"Homepage" = "https://github.com/sylvesterdas/expense-tracker.git"
"Bug Tracker" = "https://github.com/sylvesterdas/expense-tracker.git/issues"

[project.scripts]
expense-tracker = "expense_tracker.main:home"

[tool.setuptools.packages.find]
where = ["src"]
